# PID-discreto

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
include/project/: PID.h  common.h
src/: main.cpp
src/utils/: PID.cpp  helpers.cpp  helpers.h  plots.py
tests/: test_main.cpp
